# glusterfs

./: Dockerfile  run-tests-in-docker.sh
api/src/: Makefile.am  glfs-mgmt.c
cli/src/: cli.c
extras/create_new_xlator/: generate_xlator.py
glusterfsd/src/: Makefile.am  glusterfsd-mgmt.c  glusterfsd.c  glusterfsd.h
libglusterfs/src/: Makefile.am  glusterfs.h  graph.c  graph.y  xlator.c  xlator.h
rpc/rpc-lib/src/: Makefile.am  rpc-transport.c
rpc/rpc-transport/rdma/src/: Makefile.am
rpc/rpc-transport/socket/src/: Makefile.am
tests/: include.rc
tests/basic/: bd.t
tests/docker/: entrypoint.sh
xlators/cluster/afr/src/: Makefile.am
xlators/cluster/dht/src/: Makefile.am
xlators/cluster/ec/src/: Makefile.am
xlators/cluster/stripe/src/: Makefile.am
xlators/debug/error-gen/src/: Makefile.am
xlators/debug/io-stats/src/: Makefile.am
xlators/debug/trace/src/: Makefile.am
xlators/encryption/crypt/src/: Makefile.am
xlators/encryption/rot-13/src/: Makefile.am
xlators/features/arbiter/src/: Makefile.am
xlators/features/barrier/src/: Makefile.am
xlators/features/changelog/src/: Makefile.am
xlators/features/changetimerecorder/src/: Makefile.am
xlators/features/compress/src/: Makefile.am
xlators/features/gfid-access/src/: Makefile.am
xlators/features/glupy/examples/: Makefile.am
xlators/features/glupy/src/: Makefile.am
xlators/features/index/src/: Makefile.am
xlators/features/leases/src/: Makefile.am
xlators/features/locks/src/: Makefile.am
xlators/meta/src/: Makefile.am
xlators/performance/md-cache/src/: Makefile.am
(+36 files in other folders)
